--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -1,7 +1,7 @@
 ---
 layout: distill
-title: a distill-style blog post
-description: an example of a distill-style blog post and main elements
+title: V-JEPA
+description: The next step toward Yann LeCun’s vision of advanced machine intelligence (AMI)
 tags: distill formatting
 giscus_comments: true
 date: 2021-05-22
@@ -61,9 +61,14 @@ _styles: >
   }
 ---
 
-## Equations
+## Key Points
+- self-supervised learning, non-generative model
 
-This theme supports rendering beautiful math in inline and display modes using [MathJax 3](https://www.mathjax.org/) engine.
+- architecture solely based on feature prediction. No pretrained image encoders, negative examples, human annotations, pixel reconstructions.
+- masked modeling predicton + joint embedding predictive architecture
+- questions & thoughts: can x & y be different modalities? what to predict from what?
+
+Yann Lecun This theme supports rendering beautiful math in inline and display modes using [MathJax 3](https://www.mathjax.org/) engine.
 You just need to surround your math expression with `$$`, like `$$ E = mc^2 $$`.
 If you leave it inside a paragraph, it will produce an inline expression, just like $$ E = mc^2 $$.
 
